:bug: Added Overflow-x: hidden on Body
Added Overflow-x: hidden on Body

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -171,7 +171,7 @@
  */
 
 /* 1.1 typography */
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Work+Sans:400,500,600");
+/* @import url("https://fonts.googleapis.com/css?family=Public Sans:300,400,500,600,700|Work+Sans:400,500,600"); */
 
 @font-face {
     font-family: "Public Sans";
@@ -179,10 +179,11 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
     font-size: 15px;
+    overflow-x: hidden !important;
 }
 
 p,
@@ -202,7 +203,7 @@ h5,
 h6 {
     color: #222;
     font-weight: 500;
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
 }
 
 h1,
@@ -642,7 +643,7 @@ button {
 .breadcrumb li,
 .breadcrumb a {
     color: #fff;
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
     font-weight: 600;
     font-size: 12px;
     margin: 0 10px;
@@ -815,7 +816,7 @@ button {
 }
 
 .font-primary {
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
 }
 
 .font-secondary {
@@ -1018,7 +1019,7 @@ button {
 
 .navigation .navbar .nav-item .nav-link {
     padding: 15px 10px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
     /* font-weight: 600; */
     color: #222;
     text-transform: uppercase;
@@ -2057,7 +2058,7 @@ img.arrow-bottom {
     color: #222;
     transition: 0.2s ease;
     font-size: 16px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Public Sans", sans-serif;
 }
 
 .nav-tabs .nav-item .active {
